--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=ChatApp.db"
-  }
+  },
+  "TokenKey": "super secret key for testing the application and its going to be changed later on"
 }
