--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "mobx": "^6.13.0",
@@ -21,6 +22,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "typescript": "^4.9.5",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
